[package]
name = "animation-ssd1306"
version = "0.1.0"
authors = ["Mateusz Janda <mateusz.janda@gmail.com>"]
edition = "2021"

[[bin]]
name = "animation-ssd1306"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
# ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
display-interface = "0.4.1"
embedded-graphics-core = "0.4.0"
avr-progmem = "0.4.0"

[dependencies.ssd1306]
path = "../ssd1306"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
